// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionViewer renders a discussion_topic submission 1`] = `
<AuthenticatedWebView
  contentInset={
    Object {
      "bottom": 0,
    }
  }
  openLinksInSafari={true}
  source={
    Object {
      "uri": "https://google.com",
    }
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;

exports[`SubmissionViewer renders a file (stub) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This student does not have a submission for this assignment.
  </Text>
</View>
`;

exports[`SubmissionViewer renders a media submission 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <VideoContainer
    source={
      Object {
        "uri": "https://instructuremedia.com/charlie_the_unicorn",
      }
    }
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      }
    }
    testID="submission-viewer.video"
  />
</View>
`;

exports[`SubmissionViewer renders a moderated graded assignment submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <CoreWebView
    bounces={true}
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    onHeightChange={[Function]}
    onNavigation={[Function]}
    source={
      Object {
        "html": "This is my submission!",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`SubmissionViewer renders an online_quiz submission 1`] = `
<AuthenticatedWebView
  contentInset={
    Object {
      "bottom": 0,
    }
  }
  onNavigation={[Function]}
  openLinksInSafari={false}
  source={
    Object {
      "uri": "https://google.com",
    }
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;

exports[`SubmissionViewer renders an online_text_entry submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <CoreWebView
    bounces={true}
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    onHeightChange={[Function]}
    onNavigation={[Function]}
    source={
      Object {
        "html": "<p>Form Voltron</p>",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`SubmissionViewer renders external tool submission 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This student does not have a submission for this assignment.
  </Text>
</View>
`;

exports[`SubmissionViewer renders external tool submission with a submission 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This student does not have a submission for this assignment.
  </Text>
</View>
`;

exports[`SubmissionViewer renders grade-only submission 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This student does not have a submission for this assignment.
  </Text>
</View>
`;

exports[`SubmissionViewer renders no group submission 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This group does not have a submission for this assignment.
  </Text>
</View>
`;

exports[`SubmissionViewer renders no submission 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This student does not have a submission for this assignment.
  </Text>
</View>
`;

exports[`SubmissionViewer renders on-paper submission 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This assignment only allows on-paper submissions.
  </Text>
</View>
`;

exports[`SubmissionViewer renders submission type of none 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 200,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "500",
          "textAlign": "center",
        },
      ]
    }
  >
    This assignment does not allow submissions.
  </Text>
</View>
`;
